# sos_lab_pgpool2

./: .env  .gitignore  docker-compose.development.yml  docker-compose.yml  start.sh
services/auth_server/: Dockerfile.Dev
services/ml_server/: Dockerfile.Dev  pyproject.toml
services/ml_server/environment/: backend.env.debug  broker.env.debug
services/ml_server/src/: logger.py  main.py  model.py  settings.py
services/ml_server/src/models/: DTC_6-4_7_6_full.joblib  DTC_6-4_7_6_full_no_scale.joblib  DTC_6-4_7_6_no_scale.joblib
services/server_lab/: Dockerfile.Prod  pyproject.toml  requirements.txt
services/server_lab/.vim/: coc-settings.json
services/server_lab/src/: env.py  main.py  settings.py
services/server_lab/src/database/: config.py  models.py
services/server_lab/src/routes/: base_config.py
services/server_lab/src/schemas/: base_config.py  users.py
services/user_server/: Dockerfile.Dev  Dockerfile.Prod  pyproject.toml
services/user_server/environment/: db.env.debug  redis_cache.env.debug  server.env.debug  token.env.debug
services/user_server/migrations/models/: 0_20231213093939_init.py  1_20231211141613_None.py
services/user_server/secrets/: debug_jwt_secret  prod_db_password
services/user_server/src/: logger.py  main.py  schemas.py
services/user_server/src/api/: dependencies.py  paginated.py
services/user_server/src/api/v1/: __init__.py  base_configs.py  login.py  users.py
services/user_server/src/core/: cache.py  logger.py  redis.py  schemas.py  security.py  settings.py  setup.py
services/user_server/src/core/sessions/: refresh_session.py
services/user_server/src/crud/: base_config_service.py  userService.py  users.py
services/user_server/src/database/: config.py  models.py
services/user_server/src/exceptions/: http_exceptions.py
services/user_server/src/routes/: base_config.py
services/user_server/src/schemas/: base_config.py  model_config.py  user.py
